# LongExposer

./: .clang-format  .gitignore  AVCodecContextHolder.cpp  AVCodecContextHolder.hpp  AVExceptions.hpp  AVFormatContextHolder.cpp  AVFormatContextHolder.hpp  AVFrameHolder.cpp  AVFrameHolder.hpp  AVPacketHolder.cpp  AVPacketHolder.hpp  CMakeLists.txt  FrameExtractor.cpp  FrameExtractor.hpp  LICENSE  RGBFrameConverter.cpp  RGBFrameConverter.hpp  Readme.md  main.cpp
